--- a/Report/templates/receipt_from_production_based_on_order_no.html
+++ b/Report/templates/receipt_from_production_based_on_order_no.html
@@ -10,9 +10,9 @@
     {{ form.as_p }}
     <button class='btn btn-info' type="submit">Filter</button>
 </form>
-
-<table id="itemsTable" class="table table-bordered" style="border-color:black;">
-    <thead class="table-dark">
+{% if items %}
+<table id="itemsTable" class="table table-bordered" >
+    <thead >
         <tr>
             <th>Name</th>
             <th>Created</th>
@@ -44,6 +44,6 @@
         </tr>
     </tfoot>
 </table>
-
+{% endif %}
 
 {% endblock %}
