--- a/Report/templates/receipt_from_production_between_date.html
+++ b/Report/templates/receipt_from_production_between_date.html
@@ -23,9 +23,9 @@
 
     <button class="btn btn-primary mb-2" type="submit">Submit</button>
 </form>
-
-<table id="itemsTable" class="table table-bordered" style="border-color:black;">
-    <thead class="table-dark">
+{% if items %}
+<table id="itemsTable" class="table table-bordered" >
+    <thead class="">
         <tr>
             <th>Name</th>
             <th>Created</th>
@@ -51,12 +51,10 @@
             </tr>
         {% endfor %}
     </tbody>
-    <tfoot>
-        <tr>
-            <td id="sum-cell" colspan="3"></td>
-        </tr>
-    </tfoot>
+
+
+
 </table>
-
-
+<p id="sum-cell" colspan="3"></p>
+{% endif %}
 {% endblock %}
