--- a/static/css/admin_styles.css
+++ b/static/css/admin_styles.css
@@ -1,7 +1,8 @@
-input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel], textarea  {
+input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel]  {
     height: 20px !important;
 }
 
+textarea{height: 60px!important;}
 
 select {
     height: 30px !important;
