--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -26,6 +26,27 @@
 </head>
 <body>
     <div class="container-fluid">
+        <div class="container">
+            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+              <div class="col-md-3 mb-2 mb-md-0">
+                <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                  <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+                </a>
+              </div>
+        
+              <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li>  <a class='nav-link px-2 btn btn-elegant waves-effect waves-light' href="{% url 'home' %}">Home</a></li>
+                <li>  <a class='nav-link px-2 btn btn-elegant waves-effect waves-light' href="{% url 'report' %}">report</a></li>
+              </ul>
+        
+              <div class="col-md-3 text-end">
+                 <a class='nav-link px-2 btn btn-elegant waves-effect waves-light' href="{% url 'admin:index' %}">Login</a>
+                
+           
+              </div>
+            </header>
+          </div>
+
 
         {% block content %}{% endblock %}
     </div>
