--- a/Report/templates/form.html
+++ b/Report/templates/form.html
@@ -1,4 +1,4 @@
-<form method="post">
+<form method="post" class='text-center'>
     {% csrf_token %}
     <div class="row">
 
@@ -20,6 +20,6 @@
         {% endfor %}
       </div>
 <div class="text-center">
-    <button class="btn blue-gradient btn-rounded waves-effect waves-light btn-sm" type="submit">Submit</button>
+    <button class="btn btn-sm btn-elegant btn-rounded waves-effect waves-light" type="submit">Submit</button>
 </div>    
 </form>
