--- a/static/css/admin_styles.css
+++ b/static/css/admin_styles.css
@@ -1,3 +1,5 @@
+body{font-family: Roboto, sans-serif;}
+
 input[type=text], input[type=password], input[type=email], input[type=url], input[type=number], input[type=tel]  {
     height: 20px !important;
 }
@@ -24,7 +26,7 @@ td, th {
 
 .accordion {
     
-    width: 330px !important;
+    width: 300px !important;
 }
 
 .form-group  label{
