--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,6 +5,8 @@
 
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">   
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+
     <style>
         /* Hide the Recent actions section */
         #content-related{
