--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -22,12 +22,15 @@
         text-align: left;
         border-radius: 3px;
     }
+    select{
+        display: initial !important;
+    }
 </style>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="container">
-            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
+            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start bg-light">
               <div class="col-md-3 mb-2 mb-md-0">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
                   <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
@@ -45,7 +48,7 @@
            
               </div>
             </header>
-          </div>
+      
 
 
         {% block content %}{% endblock %}
