--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -50,10 +50,10 @@
 <section class="h-100 gradient-form" style="background-color: #eee;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-xl-10">
+      <div class="col-md-6">
         <div class="card rounded-3 text-black">
           <div class="row g-0">
-            <div class="col-lg-6">
+            <div class="col-lg-a">
               <div class="card-body p-md-5 mx-md-4">
 
 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
