--- a/Production/templates/admin/Production/ProductionOrder/change_form.html
+++ b/Production/templates/admin/Production/ProductionOrder/change_form.html
@@ -63,10 +63,10 @@
 
 
         {% for fieldset in adminform %}
-            {% comment %} {% if fieldset.name %}<h2>{{ fieldset.name }}</h2>{% endif %} {% endcomment %}
-            {% comment %} {% if fieldset.description %}
+            {% if fieldset.name %}<h2>{{ fieldset.name }}</h2>{% endif %}
+            {% if fieldset.description %}
                 <div class="description">{{ fieldset.description|safe }}</div>
-            {% endif %} {% endcomment %}
+            {% endif %}
             {% for line in fieldset %}
             {% if forloop.first %}
             <div class="row ">
