--- a/static/css/admin_styles.css
+++ b/static/css/admin_styles.css
@@ -5,7 +5,7 @@ body{font-family: Roboto, sans-serif;}
     background-color: #2e2e2e!important;
     color: #fff;
 }
-
+/* https://cssgradient.io/ */
 div.breadcrumbs {
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 75%);
