--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -57,8 +57,11 @@
               <div class="card-body p-md-5 mx-md-4">
 
 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+<div class="text-center">
+  <img src="{% static 'images/logo.jpg'%}" alt="" srcset="" width="250px" height="100px">
 
-  <h1 class="text-center">OleeTech</h1>
+</div>
+  <!-- <h1 class="text-center">OleeTech</h1> -->
   
   <div class=" ">
     <label class="form-label" for="{{ form.username.name }}">Username</label>
