order item balance report

--- a/Report/templates/production/production_balance_based_on_orderNo_every_department.html
+++ b/Report/templates/production/production_balance_based_on_orderNo_every_department.html
@@ -17,7 +17,7 @@
         <thead>
             <tr>
                 <th>Department</th>
-                <th>Total Quantity from ProductionReceiptItem</th>
+                <th>Productin Qty </th>
                 <th>Balance Quantity</th>
             </tr>
         </thead>
