add businesspartner report

--- a/Report/templates/post_list.html
+++ b/Report/templates/post_list.html
@@ -19,7 +19,7 @@
 
 
             {% for post in posts %}
-            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4 pb-4">
         <!-- Card -->
         <div class="card card-cascade cascading-admin-card">
             <div class="admin-up text-center">
