update report page table border color black

--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -25,6 +25,11 @@
     select{
         display: initial !important;
     }
+    table.table-bordered.dataTable th, table.table-bordered.dataTable td {
+        color: black !important;
+        font-weight: bold;
+        border:1px solid black;
+    }
 </style>
 </head>
 <body>
