--- a/templates/baseprint.html
+++ b/templates/baseprint.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Default Title{% endblock %}</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <style>
+              /* Custom CSS for left border */
+              .custom-blockquote {
+                border-left: 5px solid #007bff; /* Change color as needed */
+                padding-left: 15px; /* Adjust spacing as needed */
+            }
+
+            @media print {
+              /* Custom CSS for print media */
+              .col-md-6 {
+                  width: 50%; /* Adjust width as needed for your layout */
+                  float: left; /* Float elements to achieve side-by-side layout */
+              }
+              .col-md-4 {
+                width: 33%; /* Adjust width as needed for your layout */
+                float: left; /* Float elements to achieve side-by-side layout */
+                
+            }              
+          }
+    </style>
 </head>
 <body>
     
