--- a/Report/templates/sales/order_balance_production_delivery_line_wise.html
+++ b/Report/templates/sales/order_balance_production_delivery_line_wise.html
@@ -21,7 +21,7 @@
             <th>Production Balance</th>
             <th>Delivery Quantity Sum</th>
             <th>Delivery Balance</th>
-            <th>Ready In Hand </th>            
+            {% comment %} <th>Ready In Hand </th>             {% endcomment %}
         </thead>
         {% for data in balance_data %}
         <tr>
@@ -33,7 +33,7 @@
             <td>{{ data.production_receipt_balance }}</td>
             <td>{{ data.delivery_quantity_sum }}</td>
             <td>{{ data.delivery_balance }}</td>
-            <td>{{ data.ready_in_hand }}</td>
+            {% comment %} <td>{{ data.ready_in_hand }}</td> {% endcomment %}
         </tr>
         {% endfor %}
     </table>
