--- a/Production/templates/admin/Production/ProductionOrder/change_form.html
+++ b/Production/templates/admin/Production/ProductionOrder/change_form.html
@@ -30,7 +30,7 @@
 {% endblock %}
 {% endif %}
 
-{% block content %}<div id="content-main">
+{% block content %}<div id="content-main" class='card p-4'>
 {% block object-tools %}
 {% if change and not is_popup %}
   <ul class="object-tools">
