--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>OleeTech Bootstrap Template - Index</title>
+  <title>OleeTech </title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,18 +43,22 @@
     <div class="container">
 
       <div class="logo float-left">
-        <!-- Uncomment below if you prefer to use an text logo -->
-        <!-- <h1><a href="index.html">OleeTech</a></h1> -->
-        <a href="{% url 'home' %}"><h1 style="font-weight: bolder;">Oleetech</h1> </a>
+
+        <a href="{% url 'home' %}"><h1 style="font-weight: bolder;">   
+           {% comment %} <img src="{{ header.logo.url }}" alt="Logo" width='100px' height='100px'>      {% endcomment %}
+           {{ header.title }}    </h1> </a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+
+          {% for item in navigation %}
+          <li><a href="{{ item.link }}">{{ item.title }}</a></li>          
+      {% endfor %}
+
+
+
           <li class="drop-down"><a href="">Application</a>
             <ul>
               <li><a href="{% url 'admin:index' %}">Login</a></li>
@@ -62,8 +66,7 @@
               <li><a href="{% url 'post_list' %}">Report</a></li>
 
             </ul>
-          </li>
-          <li><a href="#contact">Contact Us</a></li>
+          </li>   
         </ul>
       </nav><!-- .main-nav -->
 
@@ -75,11 +78,16 @@
     <div class="container" data-aos="fade-up">
 
       <div class="intro-img" data-aos="zoom-out" data-aos-delay="200">
+        {% if intro_section.background_image %}
+    <img src="{{ intro_section.background_image.url }}" alt="Background Image">
+      
+      {% else %}
         <img src="{% static 'assets/img/intro-img.svg' %}" alt="" class="img-fluid">
+        {% endif %}
       </div>
 
       <div class="intro-info" data-aos="zoom-in" data-aos-delay="100">
-        <h2>We provide<br><span>solutions</span><br>for your business!</h2>
+        {{ intro_section.intro_text |safe }}
         <div>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
           <a href="#services" class="btn-services scrollto">Our Services</a>
@@ -96,76 +104,14 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>About Us
+          </h3>
+          <p>{{ about_us.title }}</p>
         </header>
 
-        <div class="row about-container">
 
-          <div class="col-lg-6 content order-lg-1 order-2">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
 
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
 
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
-            <img src="{% static 'assets/img/about-img.svg' %}" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="row about-extra">
-          <div class="col-lg-6" data-aos="fade-right">
-            <img src="{% static 'assets/img/about-extra-1.svg' %}" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
-            <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
-            <p>
-              Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
-            </p>
-            <p>
-              Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
-            </p>
-          </div>
-        </div>
-
-        <div class="row about-extra">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="{% static 'assets/img/about-extra-2.svg' %}" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
-            <h4>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h4>
-            <p>
-              Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at blanditiis beatae incidunt sunt.
-            </p>
-            <p>
-              Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto.
-            </p>
-            <p>
-              Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
-            </p>
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End About Section -->
