--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -32,7 +32,9 @@
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
         <img src="{% static 'images/logo.jpg' %}" alt="Rebel" width='70px'>
-        Rebel
+        
     </a>
+    
 </h1>
+<!-- <span>Reliable Element For Business Estsblishment And Logistics </span> -->
 {% endblock %}
