--- a/Report/templates/post_list.html
+++ b/Report/templates/post_list.html
@@ -16,7 +16,7 @@
       <!-- Grid column -->
 
        
-
+      <h1>Business Analysis Report </h1>
 
             {% for post in posts %}
             <div class="col-xl-3 col-md-6 mb-xl-0 mb-4 pb-4">
