--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Date Wise Production Report </title>
+    <title> Report </title>
   <!-- Font Awesome -->
   <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}"rel="stylesheet">
 
@@ -45,7 +45,7 @@
         <!-- Uncomment below if you prefer to use an text logo -->
         <!-- <h1><a href="index.html">OleeTech</a></h1> -->
         <a href="{% url 'home' %}">
-          OleeTech
+          <h2>Rebel</h2>
           {% comment %} <img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"> {% endcomment %}
         </a>
       </div>
