--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,7 +12,7 @@
     {{ block.super }}
 
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">   
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="{% static 'css/w3.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
 
