--- a/templates/home.html
+++ b/templates/home.html
@@ -77,22 +77,24 @@
   <!-- ======= Intro Section ======= -->
   <section id="intro" class="clearfix">
     <div class="container" data-aos="fade-up">
+      <iframe width="1200" height="455" src="https://www.youtube.com/embed/dgWPeuxBFrg?si=lFRQrvRMYPp6DMUz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
       <div class="intro-img" data-aos="zoom-out" data-aos-delay="200">
-        {% if intro_section.background_image %}
+        {% comment %} {% if intro_section.background_image %}
+
     <img src="{{ intro_section.background_image.url }}" alt="Background Image">
       
       {% else %}
         <img src="{% static 'assets/img/intro-img.svg' %}" alt="" class="img-fluid">
-        {% endif %}
+        {% endif %} {% endcomment %}
       </div>
 
-      <div class="intro-info" data-aos="zoom-in" data-aos-delay="100">
+      {% comment %} <div class="intro-info" data-aos="zoom-in" data-aos-delay="100">
         {{ intro_section.intro_text |safe }}
         <div>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
           <a href="#services" class="btn-services scrollto">Our Services</a>
-        </div>
+        </div> {% endcomment %}
       </div>
 
     </div>
@@ -107,7 +109,7 @@
         <header class="section-header">
           <h3>About Us
           </h3>
-          <p>{{ about_us.title }}</p>
+          <p>{{ about_us.text|safe }}</p>
         </header>
 
 
@@ -122,8 +124,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <h3>Modules</h3>
+          <p>Fully Automotion business transection and gives  analytics data.</p>
         </header>
 
         <div class="row justify-content-center">
@@ -131,14 +133,14 @@
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="">Inventory</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">Purchase</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
@@ -146,14 +148,14 @@
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">Sales</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Production</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
           </div>
@@ -161,24 +163,38 @@
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <h4 class="title"><a href="">Banking</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <h4 class="title"><a href="">Business Partner </a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
+          <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
+            <div class="box">
+              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
+              <h4 class="title"><a href="">Finance </a></h4>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
+            <div class="box">
+              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
+              <h4 class="title"><a href="">Human Resource </a></h4>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
+          </div>    
 
         </div>
 
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Why Us Section ======= -->
+    {% comment %} <!-- ======= Why Us Section ======= -->
     <section id="why-us">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
@@ -248,9 +264,9 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section><!-- End Why Us Section --> {% endcomment %}
 
-    <!-- ======= Portfolio Section ======= -->
+    {% comment %} <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="clearfix">
       <div class="container" data-aos="fade-up">
 
@@ -400,7 +416,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section --> {% endcomment %}
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="section-bg">
@@ -468,7 +484,7 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Team Section ======= -->
+    {% comment %} <!-- ======= Team Section ======= -->
     <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
@@ -553,7 +569,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section><!-- End Team Section --> {% endcomment %}
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="section-bg">
