--- a/templates/home.html
+++ b/templates/home.html
@@ -576,12 +576,12 @@
 
       <div class="container" data-aos="fade-up">
 
-        <div class="section-header">
+        {% comment %} <div class="section-header">
           <h3>Our CLients</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque dere santome nida.</p>
-        </div>
+        </div> {% endcomment %}
 
-        <div class="row no-gutters clients-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+        {% comment %} <div class="row no-gutters clients-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="client-logo">
@@ -631,7 +631,7 @@
             </div>
           </div>
 
-        </div>
+        </div> {% endcomment %}
 
       </div>
 
