--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -45,9 +45,8 @@
         <!-- Uncomment below if you prefer to use an text logo -->
         <!-- <h1><a href="index.html">OleeTech</a></h1> -->
         <a href="{% url 'home' %}">
-          <h2>Rebel</h2>
-          {% comment %} <img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"> {% endcomment %}
-        </a>
+          {% comment %} <h2>Rebel</h2> {% endcomment %}
+          <img src="{% static 'images/logo.jpg' %}" alt="Logo" width='100px' height='100px'>         </a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
