--- a/HR/templates/upload_overtime_record.html
+++ b/HR/templates/upload_overtime_record.html
@@ -7,7 +7,7 @@
 <section class="section card mb-5">
 
     <div class="card-body">
-<h1>Upload Payroll </h1>
+<h1>Upload Ot Hour  </h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
