--- a/Production/templates/admin/Production/ProductionOrder/change_form.html
+++ b/Production/templates/admin/Production/ProductionOrder/change_form.html
@@ -139,7 +139,11 @@
 
 {% block after_related_objects %}{% endblock %}
 
-{% block submit_buttons_bottom %}{% submit_row %}{% endblock %}
+{% block submit_buttons_bottom %}
+
+{% submit_row %}
+
+{% endblock %}
 
 {% block admin_change_form_document_ready %}
     <script id="django-admin-form-add-constants"
