--- a/HR/templates/form.html
+++ b/HR/templates/form.html
@@ -5,7 +5,7 @@
 
         {% for field in form %}
 
-        <div class="col-md-3 mb-4">
+        <div class="col-md-3 ">
 
             <div class="md-form md-outline">
                 {{ field }}
@@ -13,7 +13,7 @@
             </div>
 
           </div>
-<div class="clear"></div>
+
 
 
 
