--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -13,8 +13,9 @@
 
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">   
     <link rel="stylesheet" href="{% static 'css/w3.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
 
     <style>
